Fix: styles not showing in POC pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,26 @@
 /* @import '@fontsource/inter';
 @import '@fontsource/playfair-display';
 @import '@fontsource/rethink-sans'; */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700&display=swap');
+
+body {
+  font-family: 'Fira Sans', sans-serif;
+  background-color: var(--background, #fff);
+  color: var(--text, #000);
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  margin: 0 0 0.5em 0;
+}
+
+a {
+  text-decoration: underline;
+  color: var(--link, #FF333F); 
+}
 
 body {
   margin: 0;
